<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.preference.PreferenceCategory android:title="@string/preference_category_market" app:isPreferenceVisible="false">
        <androidx.preference.ListPreference
            android:entries="@array/markets"
            android:entryValues="@array/market_ids"
            android:key="@string/key_choose_market"
            android:title="@string/preference_title_choose_market" />
    </androidx.preference.PreferenceCategory>
    <androidx.preference.PreferenceCategory android:title="@string/preference_category_app">
        <androidx.preference.EditTextPreference
            android:imeOptions="actionDone"
            android:inputType="text"
            android:key="@string/key_package_name"
            android:selectAllOnFocus="true"
            android:title="@string/preference_title_package_name" />
        <androidx.preference.Preference
            android:key="@string/key_choose_app"
            android:title="@string/preference_title_choose_app" />
    </androidx.preference.PreferenceCategory>
    <androidx.preference.PreferenceCategory android:title="@string/preference_category_content">
        <androidx.preference.SwitchPreference
            android:defaultValue="true"
            android:key="@string/key_score_switch"
            android:title="@string/preference_title_score" />
        <androidx.preference.SwitchPreference
            android:defaultValue="true"
            android:key="@string/key_score_count_switch"
            android:title="@string/preference_title_score_count" />
        <androidx.preference.SwitchPreference
            android:defaultValue="true"
            android:key="@string/key_watch_switch"
            android:title="@string/preference_title_watch" />
        <androidx.preference.SwitchPreference
            android:defaultValue="true"
            android:key="@string/key_comment_switch"
            android:title="@string/preference_title_comment" />
        <androidx.preference.SwitchPreference
            android:defaultValue="true"
            android:key="@string/key_download_switch"
            android:title="@string/preference_title_download" />
        <androidx.preference.SwitchPreference
            android:defaultValue="true"
            android:key="@string/key_time_switch"
            android:title="@string/preference_title_time" />
    </androidx.preference.PreferenceCategory>
</androidx.preference.PreferenceScreen>