<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="8dp"
    android:background="@drawable/widget_background"
    android:layout_gravity="center_vertical"
    android:gravity="center"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/icon"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:scaleType="fitXY"
        tools:src="@drawable/ic_launcher_background" />
    <LinearLayout
        android:id="@+id/download_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingStart="4dp"
        android:paddingEnd="4dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/download"
            android:textColor="@color/second_text"
            android:textSize="10sp" />

        <TextView
            android:id="@+id/download_increment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="+0"
            android:textColor="@color/first_text"
            android:textSize="12sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/download"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:textColor="@color/first_text"
            android:textSize="10sp" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/watch_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingStart="4dp"
        android:paddingEnd="4dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/watch"
            android:textColor="@color/second_text"
            android:textSize="10sp" />

        <TextView
            android:id="@+id/watch_increment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="+0"
            android:textColor="@color/first_text"
            android:textSize="12sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/watch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="12345"
            android:textColor="@color/first_text"
            android:textSize="10sp" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/comment_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingStart="4dp"
        android:paddingEnd="4dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/comment"
            android:textColor="@color/second_text"
            android:textSize="10sp" />

        <TextView
            android:id="@+id/comment_increment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="+0"
            android:textColor="@color/first_text"
            android:textSize="12sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/comment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:textColor="@color/first_text"
            android:textSize="10sp" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/rank_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingStart="4dp"
        android:paddingEnd="4dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/score"
            android:textColor="@color/second_text"
            android:textSize="10sp" />

        <TextView
            android:id="@+id/rank_increment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="+0.0"
            android:textColor="@color/first_text"
            android:textSize="12sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/rank"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="4.6"
            android:textColor="@color/first_text"
            android:textSize="10sp" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/rank_count_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingStart="4dp"
        android:paddingEnd="4dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/score"
            android:textColor="@color/second_text"
            android:textSize="10sp" />

        <TextView
            android:id="@+id/rank_count_increment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="+0"
            android:textColor="@color/first_text"
            android:textSize="12sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/rank_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="2"
            android:textColor="@color/first_text"
            android:textSize="10sp" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/time_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingStart="4dp"
        android:paddingEnd="4dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time"
            android:textColor="@color/second_text"
            android:textSize="10sp" />

        <TextView
            android:id="@+id/time_increment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="+0"
            android:textColor="@color/first_text"
            android:textSize="12sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="00:00"
            android:textColor="@color/first_text"
            android:textSize="10sp" />
    </LinearLayout>
    <!--刷新-->
    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/refresh"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center"
            android:scaleType="fitXY"
            android:src="@drawable/app_widget_refresh" />

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center"
            android:indeterminateDrawable="@drawable/app_widget_progress"
            android:indeterminateDuration="2000"
            android:visibility="gone" />
    </FrameLayout>
</LinearLayout>
